# datacamp

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .windsurfrules  CONTRIBUTING.md  PROJECT_RULES.md  README.md  SECURITY.md  conftest.py  create_issues.py  issue.json  mypy.ini  prd.md  product_scraper_agent.flow.json  pyproject.toml  setup.cfg  sprintplan.md  tools-specs.json
.github/workflows/: ci.yml
flows/: README.md
flows/configs/: langflow.yaml
flows/examples/: test_scraper.json
src/: __init__.py
src/tools/: __init__.py  api_poster_tool.py  schemas.py  validator_tool.py
tests/: test_temu_scraper_tool.py
tests/fixtures/html/: complex_page.html  simple_page.html
tests/tools/: __init__.py  test_api_integration.py  test_api_poster_tool.py  test_base_scraper.py  test_bot_defense.py  test_shein_scraper.py  test_temu_scraper.py  test_validator_tool.py
tests/tools/scrapers/: test_temu_scraper.py
tests/unit/: test_bot_defense.py  test_playwright_crawler.py
tools/: __init__.py  interfaces.py
tools/bot_defense/: __init__.py  tool.py
tools/playwright_crawler/: __init__.py  tool.py
tools/scrapers/: __init__.py  base_scraper.py  shein_scraper.py  temu_scraper.py
